--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="" />
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="root"></div>
     <script src="bundle.js"></script>
   </body>
